<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL" Id="{0033c46d-4b0c-47e7-af0d-9524e918bf98}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
// ***********************************************************************************
//
// Müller-steinag Gruppe, Kandergrien Einigen, CH-3646 Bern
// ETH Zurich, Building HIF E26, Laura-Hezner-Weg 7, CH-8093 Zürich
// 
// ***********************************************************************************
// 
// PROJECT     :  A061 Digital Casting System 
// FUNCTION    :  Global Varable Decelerate
// AUTHOR      :  Weiting Chen
// EMAIL       :  chenw@usi.ch
// Copyright   :  USI Mendrisio; ETH Zürich; Müller-steinag Gruppe (CH) 2023
// Contributor :  Mathias Suter/ Philippe Fleischmann
//
// ***********************************************************************************

VAR_GLOBAL
	
    // get
	//
	// Concrete Controller 1
	b_mode_manual : BOOL;
	b_mode_laptop : BOOL; 
	b_mode_robot : BOOL;  
	
	b_CC1_enable :BOOL;
	b_CC1_power_on: BOOL;
	s_current_mode: STRING;
	
	//
	// Mixer 1
	b_MI1_ReadToDrive : BOOL;
	b_MI1_Is_Run : BOOL;
	
	f_MI1_MaxSpeed : REAL := 720 ; //distance/s] (equel to 120 rpm, by measurement 221006)
	n_MI1_OverrideSpeed :INT;
	b_Ml1_Enable : BOOL;
	b_Ml1_Set_Run : BOOL;
	
	f_MI1_ActSpeedM1 : INT;
	f_MI1_ActSpeedM2 : INT;
	
	// Data Communication Axis Mixers
	// Mixer drive A 
	Axis_Mixer1: AXIS_REF;
	
	f_MID1_ActCurrent:REAL;
	f_MID1_ActTorque:REAL;
	
	//
	// Mixer drive B
	Axis_Mixer2: AXIS_REF;
	f_MID2_ActCurrent:REAL;
	f_MID2_ActTorque:REAL;
	
	//
	// Concrete Pump 1
	b_CP1_Check_On : BOOL; //??
	b_CP1_is_run : BOOL;
	b_CP1_is_ready : BOOL;	
	b_CP1_power_on :BOOL;
	b_CP1_safety_grid_on : BOOL;
	b_CP1_drive_error :BOOL;
	
	//
	// Admixture pump 1 (High dosage)
	b_AP1_Is_Run : BOOL;
	b_AP1_Check_On : BOOL;
	b_AP1_is_ready : BOOL;
	b_AP1_no_error : BOOL;
	
	//f_AP1_Override : LREAL; 
	
	//
	// Spare Admixture pump 1 (Low dosage)
	b_SP1_Is_Run : BOOL;
	b_SP1_Check_On : BOOL;
	b_SP1_is_ready : BOOL;
	b_SP1_no_error : BOOL;
	
	//f_SP1_Override :LREAL;

	// Config
	// Concrete Pump 1
	f_CP1_Max_Flowrate : REAL;
	f_CP1_Check_Flowrate : REAL;
	t_CP1_Check_Duration : TIME;
 	n_CP1_Flush_Flowrate :REAL;
	
	// Admixture pump (High)
	n_AP1_Max_Flowrate : REAL;
	n_AP1_Check_Flowrate : REAL;
	t_AP1_Check_Duration : TIME;
	n_AP1_Flush_Flowrate : REAL;
	f_AP1_Check_Mass : REAL;
	
	// Admixture pump (low)
	n_SP1_Max_Flowrate : REAL;
	n_SP1_Check_Flowrate : REAL;
	t_SP1_Check_Duration : TIME;
	n_SP1_Flush_Flowrate : REAL;
	f_SP1_Check_Mass : REAL;
	
	
	
	
	
	// 
	// Data Communication RS-232 (Spare)
	TxBufferEL								: ComBuffer;
	RxBufferEL								: ComBuffer;
	
			

	//
	// Control Input Speed
	fControlMixerPumpSpeed					: REAL; 
	fControlPeristalticPumpSpeed			: REAL; 
	fControlDosingPumpSpeed					: REAL; 
	fInputSpare1							: REAL; 
	fInputSpare2							: REAL; 
	
	//
	// Output Speed
	fConcretePumpSpeed						: REAL;
	fDosingPumpSpeed						: REAL;
	fOutputSpare1							: REAL;
	fOutputSpare2							: REAL;
	
	
	//
	//Hardware Input
	bSafetyIO						AT %I*	: BOOL;
	// bConcretePumpSafetyGridMounted	AT %I*	: BOOL;
	// bConcretePumpReady				AT %I*	: BOOL;
	// bConcretePumpFcError				AT %I*	: BOOL;
	bDosingPumpReady				AT %I*	: BOOL;
	bDosingPumpNoError				AT %I*	: BOOL;
	bControlResetSafety				AT %I*	: BOOL;
	bControlLaptop					AT %I*	: BOOL;
	bControlManual					AT %I*	: BOOL;	
	nControlMixerPumpOn				AT %I*	: BOOL; 
	nControlMixerPumpOff			AT %I*	: BOOL; 
	nControlConcretPumpOn			AT %I*	: BOOL; 
	nControlConcretPumpOff			AT %I*	: BOOL; 
	nControlDosingPumpOn			AT %I*	: BOOL; 
	nControlDosingPumpOff			AT %I*	: BOOL; 
	bInputSpare1					AT %I*	: BOOL;
		
	nControlMixerPumpSpeed			AT %I*	: INT; 
	// nControlPeristalticPumpSpeed	AT %I*	: INT; 
	nControlDosingPumpSpeed			AT %I*	: INT; 
	nInputSpare1					AT %I*	: INT; 
	nInputSpare2					AT %I*	: INT; 

	
	//
	//Hardware Output
	bResetSafety					AT %Q*	: BOOL;
	// bConcretePumpOn					AT %Q*	: BOOL;
	// bConcretePumpOff					AT %Q*	: BOOL;
	// bConcretePumpForwardOn			AT %Q*	: BOOL;
	// bConcretePumpBackwardOn			AT %Q*	: BOOL;
	bDosingPumpDosingHighLow		AT %Q*	: BOOL;
	bDosingPumpNoFastStop			AT %Q*	: BOOL;
	bDosingPumpDosingAmount			AT %Q*	: BOOL;
	bOutputSpare1					AT %Q*	: BOOL;
	bOutputSpare2					AT %Q*	: BOOL;
	bOutputSpare3					AT %Q*	: BOOL;
	bOutputSpare4					AT %Q*	: BOOL;
	bOutputSpare5					AT %Q*	: BOOL;
	bOutputSpare6					AT %Q*	: BOOL;
	bOutputSpare7					AT %Q*	: BOOL;
	bOutputSpare8					AT %Q*	: BOOL;
	
	// nConcretePumpSpeed				AT %Q*	: INT;
	nDosingPumpSpeed				AT %Q*	: INT;
	nOutputSpare1					AT %Q*	: INT;
	nOutputSpare2					AT %Q*	: INT;
	
	
	//
	//Hardware RS-232
	stIn_EL6001 					AT %I*	: EL6inData22B;	
	stOut_EL6001 					AT %Q*	: EL6outData22B;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>