<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <GVL Name="GVL_IO" Id="{44600b8d-a6e4-429a-9add-e1e71d3867c2}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
// ***********************************************************************************
//
// Müller-steinag Gruppe, Kandergrien Einigen, CH-3646 Bern
// ETH Zurich, Building Hin E26, Laura-Hezner-Weg 7, CH-8093 Zürich
// 
// ***********************************************************************************
// 
// PROJECT     :  A061 Digital Casting System 
// FUNCTION    :  Global Proninet Varable with robot
// AUTHOR      :  Weiting Chen
// EMAIL       :  chenw@usi.ch
// Copyright   :  USI Mendrisio; ETH Zürich; Müller-steinag Gruppe (CH) 2023
// Contributor :  Fabio Scotto / Philippe Fleischmann 
//
// ***********************************************************************************

VAR_GLOBAL
		
	// Hardware Inputs
	//
	// Mixer  
	// TODO Please link to IO PLC
	in_MID1_ActAbsCurrent AT %I*: INT;
	in_MID1_ActMotorTemperature AT %I* :UINT; 
	in_MID2_ActAbsCurrent AT %I*: INT;
	in_MID2_ActMotorTemperature AT %I* :UINT; 
	
	//
	// Concrete Controller 1
	ib_CC1_Safety_Ready AT %I*: BOOL; // Safety ready for line mixer button 
	ib_CC1_Button_Mode_Manual AT %I*: BOOL;
	ib_CC1_Button_Mode_Laptop AT %I*: BOOL;
	
	ib_CC1_Button_Reset AT %I*: BOOL;
	
	//
	// Concrete Pump 1
	ib_CP1_Drive_Error AT %I*: BOOL;
	ib_CP1_Ready AT %I*: BOOL;
	ib_CP1_Safety_Grid_Mounted AT %I*: BOOL;
	in_CP1_Tube_Pressure_Sensor AT %I*: INT; //??
	in_CP1_Tube_Temperature_Sensor AT %I*: INT; //??
	
	//
	// Accelerator Pump 1
	ib_AP1_Button_On AT %I*: BOOL;
	ib_AP1_Button_Not_Off AT %I*: BOOL;
	ib_AP1_Ready AT %I*: BOOL;
	ib_AP1_No_Error AT %I*: BOOL;
	in_AP1_Poti_Speed AT %I*	: INT; 
	
	// 
	// Superplasticizer Pump 1 (WT 220915)
	ib_SP1_Button_On AT %I*: BOOL;
	ib_SP1_Button_Not_Off AT %I*: BOOL;
	ib_SP1_Ready AT %I*: BOOL;
	ib_SP1_No_Error AT %I*: BOOL;
	//in_SP1_Poti_Speed AT %I*	: INT; 
	
	//
	// Mixer 1
	ib_MI1_Button_On AT %I*: BOOL;
	ib_MI1_Button_Not_Off AT %I*: BOOL;
	in_MI1_Poti_Speed AT %I*	: INT; 
	
	//
	// Temperature sensor #WT 20230510
	in_Temp_CPump_fresh AT %I*: INT;
	in_Temp_Funnel_Outlet AT %I*: INT;
	in_Temp_CPump AT %I*: INT;
	
	in_Pressure_Funnel AT %I*: INT;
	in_Pressure_Pump AT %I*: INT;
	
	//
	// Hardware Outputs
	//
	// Concrete Controller 1
	ob_CC1_Safety_Reset AT %Q*: BOOL;
	
	//
	// Concrete Pump 1
	ob_CP1_Start AT %Q*: BOOL;
	ob_CP1_Stop AT %Q*: BOOL;
	ob_CP1_Forward AT %Q*: BOOL;
	ob_CP1_Backward AT %Q*: BOOL;
	on_CP1_Speed AT %Q*: INT;
	
	//
	// Admixture Pump 1
	ob_AP1_Power_On AT %Q*: BOOL;
	ob_AP1_Start AT %Q*: BOOL;
	ob_AP1_Pressure_Ok AT %Q*: BOOL;
	ob_AP1_Not_Empty AT %Q*: BOOL;
	ob_AP1_Pulse AT %Q*: BOOL;
	on_AP1_Speed AT %Q*: INT;
	
	// 
	// Sup-Admixture Pump 1
	ob_SP1_Power_On AT %Q*: BOOL;
	ob_SP1_Start AT %Q*: BOOL;
	ob_SP1_Pressure_Ok AT %Q*: BOOL;
	ob_SP1_Not_Empty AT %Q*: BOOL;
	ob_SP1_Pulse AT %Q*: BOOL;
	on_SP1_Speed AT %Q*: INT;
	
	
	// Archived TODO Check with plc current layout
	// Peristaltic Pump 1 ( SHOULD BE REMOVE, it is old pump 
	// in_PP1_Poti_Speed AT %I*	: INT; 

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>